--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 常川研究室（予定地）
+title: 中央大学文学部　常川ゼミ公式ウェブサイト
 description: >- # this means to ignore newlines until "baseurl:"
-  常川研究室のウェブサイトとなる予定です。
+  常川ゼミのウェブサイトです。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tsunelabs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tsunelabs
